--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,36 @@
-<app-add-resto></app-add-resto>
-<app-update-resto></app-update-resto>
-<app-list-resto></app-list-resto>
-<app-register-resto></app-register-resto>
+<nav class="navbar navbar-expand-lg bg-danger">
+  <div class="container">
+    <a class="navbar-brand text-light" href="#">Resto App</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+      aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse " id="navbarScroll">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a routerLink="add" class="nav-link text-light">Add Resto</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="list" class="nav-link text-light">List Resto</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="login" class="nav-link text-light">Login Resto</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="register" class="nav-link text-light">Register Resto</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="update" class="nav-link text-light">Update Resto</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-secondary text-light" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+<!-- RENDARING PAGE -->
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
