--- a/src/app/header/list-resto/list-resto.component.html
+++ b/src/app/header/list-resto/list-resto.component.html
@@ -1,1 +1,20 @@
 <p>list-resto works!</p>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Address</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let item of collectionItem">
+            <td>{{item.id}}</td>
+            <td>{{item.name}}</td>
+            <td>{{item.email}}</td>
+            <td>{{item.address}}</td>
+        </tr>
+    </tbody>
+</table>
