Form ready for Adding Data

--- a/src/app/header/add-resto/add-resto.component.html
+++ b/src/app/header/add-resto/add-resto.component.html
@@ -1,1 +1,23 @@
-<p>add-resto works!</p>
+<h1 class="text-center text-uppercase my-3">add new restaurant!</h1>
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+        <form>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Restaurant Name</label>
+                <input type="text" class="form-control" formControlName="name" placeholder="Restaurant Name" />
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail2">Email address</label>
+                <input type="email" class="form-control" formControlName="email" placeholder="Enter email" />
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword3">Address </label>
+                <input type="text" class="form-control" formControlName="address" placeholder="Address" />
+            </div>
+            <br />
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+    <div class="col-md-3"></div>
+</div>
