--- a/src/app/header/add-resto/add-resto.component.html
+++ b/src/app/header/add-resto/add-resto.component.html
@@ -3,6 +3,13 @@
     <div class="col-md-3"></div>
     <div class="col-md-6">
         <!--  -->
+        <div *ngIf="alert" class="alert alert-success alert-dismissible fade show" role="alert">
+            <strong>Success!</strong> Your data has been added Successfully.
+            <button (click)="alertClose()" type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">X</span>
+            </button>
+        </div>
+        <!--  -->
         <form [formGroup]="addResto" (ngSubmit)="addSaveResto()">
             <div class="form-group">
                 <label for="exampleInputEmail1">Restaurant Name</label>
