--- a/src/app/header/list-resto/list-resto.component.html
+++ b/src/app/header/list-resto/list-resto.component.html
@@ -15,6 +15,11 @@
             <td>{{item.name}}</td>
             <td>{{item.email}}</td>
             <td>{{item.address}}</td>
+            <td>
+                <i (click)="deleteResto(item.id)" style="color: salmon; margin-right: 20px; font-size: 25px;"
+                    class="fa fa-trash"></i>
+                <i style="color: sienna; margin-right: 20px; font-size: 25px;" class="fa fa-pencil"></i>
+            </td>
         </tr>
     </tbody>
 </table>
