--- a/src/app/header/update-resto/update-resto.component.html
+++ b/src/app/header/update-resto/update-resto.component.html
@@ -1,1 +1,29 @@
-<p>update-resto works!</p>
+<h1 class="text-center text-uppercase my-3">update-restaurant</h1>
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+        <!-- <div *ngIf="alert" class="alert alert-success alert-dismissible fade show" role="alert">
+            <strong>Success!</strong> Your data has been added.
+            <button (click)="alertClose()" type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">X</span>
+            </button>
+        </div> -->
+        <form>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Restaurant Name</label>
+                <input type="text" class="form-control" formControlName="name" placeholder="Restaurant Name" />
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail2">Email address</label>
+                <input type="email" class="form-control" formControlName="email" placeholder="Enter email" />
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword3">Address </label>
+                <input type="text" class="form-control" formControlName="address" placeholder="Address" />
+            </div>
+            <br />
+            <button type="submit" class="btn btn-primary">Update</button>
+        </form>
+    </div>
+    <div class="col-md-3"></div>
+</div>
