Get Current Data Load in Input Field from db.json

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,9 @@
         <li class="nav-item">
           <a routerLink="register" class="nav-link text-light">Register Resto</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a routerLink="update" class="nav-link text-light">Update Resto</a>
-        </li>
+        </li> -->
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
