--- a/src/app/header/update-resto/update-resto.component.html
+++ b/src/app/header/update-resto/update-resto.component.html
@@ -2,13 +2,7 @@
 <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6">
-        <!-- <div *ngIf="alert" class="alert alert-success alert-dismissible fade show" role="alert">
-            <strong>Success!</strong> Your data has been added.
-            <button (click)="alertClose()" type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">X</span>
-            </button>
-        </div> -->
-        <form>
+        <form [formGroup]="editResto">
             <div class="form-group">
                 <label for="exampleInputEmail1">Restaurant Name</label>
                 <input type="text" class="form-control" formControlName="name" placeholder="Restaurant Name" />
