--- a/src/app/header/register-resto/register-resto.component.html
+++ b/src/app/header/register-resto/register-resto.component.html
@@ -1,1 +1,29 @@
-<p>register-resto works!</p>
+<h1 class="text-center text-uppercase my-3">register FOR NEW USER</h1>
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+        <div *ngIf="alert" class="alert alert-success alert-dismissible fade show" role="alert">
+            <strong>Success!</strong> New user has been registered successfully.
+            <button (click)="alertClose()" type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">X</span>
+            </button>
+        </div>
+        <form [formGroup]="registar" (ngSubmit)="registerCollection()">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Restaurant Name</label>
+                <input type="text" class="form-control" formControlName="name" placeholder="Enter Name" />
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail2">Email address</label>
+                <input type="email" class="form-control" formControlName="email" placeholder="Enter email" />
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword3">Password </label>
+                <input type="text" class="form-control" formControlName="password" placeholder="Enter Password" />
+            </div>
+            <br />
+            <button type="submit" class="btn btn-primary">Sign Up</button>
+        </form>
+    </div>
+    <div class="col-md-3"></div>
+</div>
